--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <div class="container">
-        <textarea name="text" id="textarea" cols="70" rows="10"></textarea>
+    <!-- <div class="container">
+        <textarea name="text" class="textarea" cols="70" rows="10"></textarea>
         <div class="keyboard-wrapper">
             <div class="row">
                 <div class="key"></div>
@@ -72,6 +72,7 @@
                 <div class="key"></div>
                 <div class="key"></div>
                 <div class="key"></div>
+                <div class="key"></div>
                 <div class="key arrow-up functional"></div>
                 <div class="key right-shift functional"></div>
             </div>
@@ -81,13 +82,13 @@
                 <div class="key left-alt functional"></div>
                 <div class="key space"></div>
                 <div class="key right-alt functional"></div>
+                <div class="key right-ctrl functional"></div>
                 <div class="key arrow-left functional"></div>
                 <div class="key arrow-down functional"></div>
                 <div class="key arrow-right functional"></div>
-                <div class="key right-ctrl functional"></div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <script src="index.js"></script>
 </body>
